# dockside

./: .gitignore  CHANGELOG.md  Cargo.toml  DNS_DESIGN.md  K8S_ROADMAP.md  PLAN_MACHINES_VIEW.md  README.md  cliff.toml  install.sh  justfile  typos.toml
.github/workflows/: ci.yml  release.yml
assets/: Info.plist
packaging/: dev.dockside.helper.policy
scripts/: bump-version.sh  generate-icon.sh  generate-placeholder-icon.sh  gh-package.sh  gh-release.sh  install-deps.sh  install.sh  pre-commit  release.sh  setup-hooks.sh
src/: app.rs  assets.rs  keybindings.rs  main.rs  tray.rs  utils.rs
src/actions/: mod.rs
src/colima/: client.rs  mod.rs  types.rs
src/docker/: client.rs  compose.rs  containers.rs  daemon_config.rs  images.rs  mod.rs  networks.rs  prune.rs  scan.rs  stats.rs  system.rs  volumes.rs
src/kubernetes/: client.rs  diagnostics.rs  distro.rs  kubeconfig.rs  mod.rs  types.rs
src/platform/: detection.rs  docker_runtime.rs  mod.rs  paths.rs  wsl.rs
src/services/: core.rs  dispatcher.rs  favorites.rs  gpui_tokio.rs  helper.rs  host.rs  init.rs  mod.rs  navigation.rs  prune.rs  task_manager.rs
src/services/colima/: kubernetes.rs  machines.rs  mod.rs
src/services/dns/: mod.rs  route_builder.rs  route_map.rs  runtime.rs  server.rs  watcher.rs
src/services/docker/: compose.rs  containers.rs  images.rs  networks.rs  volumes.rs
src/services/kubernetes/: cluster.rs  configmaps.rs  contexts.rs  cronjobs.rs  daemonsets.rs  deployments.rs  ingresses.rs  jobs.rs  mod.rs  pods.rs  pvcs.rs  secrets.rs  services.rs  ssh.rs  statefulsets.rs
src/services/proxy/: mod.rs  runtime.rs  server.rs
src/services/tls/: ca.rs  mod.rs  resolver.rs
src/services/watchers/: docker_events.rs  kubernetes.rs  manager.rs
src/state/: app_state.rs  docker_state.rs  mod.rs  settings.rs
src/terminal/: grid_element.rs  log_stream.rs  mod.rs  pty_terminal.rs  pty_terminal_stub.rs  terminal_view.rs
src/ui/: command_palette.rs  dialogs.rs  global_search.rs  mod.rs  prune_dialog.rs  setup_dialog.rs
src/ui/activity/: mod.rs  view.rs
src/ui/cluster/: mod.rs  view.rs
src/ui/clusters/: dialog.rs  mod.rs  view.rs
src/ui/components/: context_selector.rs  file_explorer.rs  form.rs  install_hint.rs  k8s_header.rs  kv_create_form.rs  loading.rs  mod.rs  namespace_selector.rs  process_view.rs  search.rs  sparkline.rs  spinning_icon.rs
src/ui/compose/: mod.rs  view.rs
src/ui/config_resources/: mod.rs  view.rs
src/ui/configmaps/: detail.rs  list.rs  mod.rs  view.rs
src/ui/containers/: cp_dialogs.rs  create_dialog.rs  detail.rs  list.rs  mod.rs  view.rs
src/ui/cronjobs/: detail.rs  list.rs  mod.rs  view.rs
src/ui/daemonsets/: detail.rs  list.rs  mod.rs  view.rs
src/ui/dashboard/: mod.rs  view.rs
src/ui/deployments/: create_dialog.rs  detail.rs  list.rs  mod.rs  scale_dialog.rs  view.rs
src/ui/images/: build_dialog.rs  detail.rs  lint_dialog.rs  list.rs  mod.rs  pull_dialog.rs  push_dialog.rs  registry_dialog.rs  tag_dialog.rs  view.rs
src/ui/ingresses/: detail.rs  list.rs  mod.rs  view.rs
src/ui/jobs/: detail.rs  list.rs  mod.rs  view.rs
src/ui/machines/: create_dialog.rs  detail.rs  edit_dialog.rs  host_dialog.rs  list.rs  machine_dialog.rs  mod.rs  view.rs
src/ui/models/: mod.rs  view.rs
src/ui/networking/: mod.rs  view.rs
src/ui/networks/: create_dialog.rs  detail.rs  list.rs  mod.rs  view.rs
src/ui/nodes/: detail.rs  join_dialog.rs  list.rs  mod.rs  view.rs
src/ui/prune/: mod.rs  view.rs
src/ui/pvcs/: detail.rs  list.rs  mod.rs  view.rs
src/ui/secrets/: detail.rs  list.rs  mod.rs  view.rs
src/ui/services/: create_dialog.rs  detail.rs  list.rs  mod.rs  view.rs
src/ui/settings/: mod.rs  view.rs
src/ui/statefulsets/: detail.rs  list.rs  mod.rs  view.rs
src/ui/storage/: mod.rs  view.rs
src/ui/volumes/: backup_restore.rs  create_dialog.rs  detail.rs  list.rs  mod.rs  view.rs
src/ui/workloads/: mod.rs  view.rs
