[package]
name = "docker-ui"
version = "0.1.0"
edition = "2021"
description = "A desktop application for managing Colima and Docker"
license = "MIT"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
bollard = "0.18"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dirs = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1.3"
portable-pty = "0.8"
parking_lot = "0.12"
vte = "0.13"
rust-embed = "8"
