[package]
name = "dockside"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "A native desktop application for managing Docker containers, images, volumes, networks, and Kubernetes resources via Colima"
license = "MIT"
repository = "https://github.com/salamaashoush/dockside"
homepage = "https://github.com/salamaashoush/dockside"
documentation = "https://github.com/salamaashoush/dockside#readme"
readme = "README.md"
keywords = ["docker", "kubernetes", "colima", "containers", "devtools"]
categories = ["development-tools", "command-line-utilities", "gui"]
authors = ["salamaashoush"]
exclude = [".github/", "scripts/", "*.md", "justfile", ".gitignore"]

[[bin]]
name = "dockside"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
bollard = "0.19"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
dirs = "6"
bytes = "1"
http-body-util = "0.1"
anyhow = "1"
tray-icon = "0.21"
muda = "0.17"
image = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "2.3"
portable-pty = "0.9"
parking_lot = "0.12"
vte = "0.15"
rust-embed = "8"
kube = { version = "2", features = ["client", "runtime"] }
k8s-openapi = { version = "0.26", features = ["v1_32"] }
which = "7"
url = "2.5.7"
hex = "0.4"

[dev-dependencies]
criterion = "0.8"
gpui = { version = "0.2", features = ["test-support"] }

[build-dependencies]

# ==================== Build Profiles ====================

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true

# ==================== Lints ====================

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Restriction lints
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Pedantic lints
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

# Performance lints
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
inefficient_to_string = "warn"
large_enum_variant = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"

# Style lints
bool_to_int_with_if = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
