[package]
name = "dockside"
version = "0.4.0"
edition = "2024"
rust-version = "1.93"
description = "A native desktop application for managing Docker containers, images, volumes, networks, and Kubernetes resources via Colima"
license = "MIT"
repository = "https://github.com/salamaashoush/dockside"
homepage = "https://github.com/salamaashoush/dockside"
documentation = "https://github.com/salamaashoush/dockside#readme"
readme = "README.md"
keywords = ["docker", "kubernetes", "colima", "containers", "devtools"]
categories = ["development-tools", "command-line-utilities", "gui"]
authors = ["salamaashoush"]
exclude = [".github/", "scripts/", "*.md", "justfile", ".gitignore"]
default-run = "dockside"

[[bin]]
name = "dockside"
path = "src/main.rs"

[[bin]]
name = "dockside-helper"
path = "src/bin/dockside_helper.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
bollard = "0.19"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
dirs = "6"
bytes = "1"
http-body-util = "0.1"
anyhow = "1"
tray-icon = "0.21"
muda = "0.17"
image = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bytesize = "2.3"
parking_lot = "0.12"
tar = "0.4"
regex = "1"
polling = "3"
rust-embed = "8"
kube = { version = "2", features = ["client", "runtime"] }
k8s-openapi = { version = "0.26", features = ["v1_32"] }
which = "8"
url = "2.5.8"
hex = "0.4"
base64 = "0.22.1"

# Local DNS server (*.dockside.test). hickory-proto for wire format only;
# we hand-roll the UDP+TCP listeners on tokio.
hickory-proto = "0.26"

# Reverse proxy + TLS (loopback HTTPS for *.dockside.test)
axum = { version = "0.8", features = ["ws", "http2"] }
hyper = { version = "1", features = ["http1", "http2", "client", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "server", "tokio"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["x509-parser"] }
time = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

# Terminal emulator backend: libghostty (terminal core only) + portable-pty for the PTY layer.
# Linked statically via vendored Zig build. Linux + macOS only — Windows shows an unsupported
# placeholder in the UI and skips this dependency entirely.
[target.'cfg(unix)'.dependencies]
libghostty-vt = { version = "0.1.1", default-features = false }
portable-pty = "0.9"

[dev-dependencies]
criterion = "0.8"
gpui = { version = "0.2", features = ["test-support"] }

[build-dependencies]

# ==================== cargo-packager ====================
#
# Used by `just package` and the release CI to produce native installers:
# macOS .app + .dmg, Linux .deb + .AppImage. Run with `cargo packager
# --release` after `cargo build --release` (the helper binary needs a
# `<name>-<target-triple>` symlink/copy next to the main binary so the
# packager can find it via `external_binaries`; the CI workflow
# generates that copy in a pre-package step).

[package.metadata.packager]
product-name = "Dockside"
identifier = "dev.dockside.app"
description = "Docker management desktop app"
long-description = """
Native desktop manager for Docker containers, images, volumes, networks,
compose projects, and Kubernetes resources. Includes embedded terminal,
live stats, image vulnerability scanning, and an optional local DNS +
HTTPS reverse proxy for accessing containers via *.dockside.test URLs.
"""
homepage = "https://github.com/salamaashoush/dockside"
authors = ["Salama Ashoush <salamaashoush@gmail.com>"]
copyright = "Copyright (c) 2025-2026 Salama Ashoush"
category = "DeveloperTool"
# Multi-size raster icons + SVG. cargo-packager keys hicolor install
# paths off each PNG's pixel dimensions, so giving it 16/32/48/.../1024
# produces a full hicolor tree — without those, GTK / Qt menus that
# look up at typical 48 / 64 / 128 sizes find no icon and fall back to
# the generic-app placeholder.
icons = [
  "assets/app-icons/icon-16.png",
  "assets/app-icons/icon-32.png",
  "assets/app-icons/icon-48.png",
  "assets/app-icons/icon-64.png",
  "assets/app-icons/icon-128.png",
  "assets/app-icons/icon-256.png",
  "assets/app-icons/icon-512.png",
  "assets/app-icons/icon-1024.png",
  "assets/app-icons/icon.svg",
  # macOS .app expects an .icns; without it cargo-packager errors out
  # with "No matching IconType" on the `app` format.
  "assets/AppIcon.icns",
]
# Bundle the privileged helper next to the main binary. The app's
# `helper_path()` walks well-known locations (sibling of current_exe is
# the package case) and falls back to `/usr/local/libexec` for the
# bootstrap-copy install.
external-binaries = ["target/dockside-helper"]
resources = [
  { src = "themes/**/*", target = "themes" },
]

[package.metadata.packager.deb]
section = "devel"
priority = "optional"
depends = ["nftables", "policykit-1", "ca-certificates", "libssl3"]
# Ship the polkit policy at install time so .deb users skip the
# bootstrap-copy prompt entirely. exec.path inside the policy must
# match where the binary lands inside the .deb (= /usr/bin/).
# libghostty-vt is built per-package by libghostty-vt-sys and shipped
# as a shared object next to the binary; the release CI stages it at
# `target/lib/libghostty-vt.so.0` and patches the binary's RPATH to
# `$ORIGIN/../lib/dockside`.
files = { "packaging/dev.dockside.helper.policy" = "/usr/share/polkit-1/actions/dev.dockside.helper.policy", "target/lib/libghostty-vt.so.0" = "/usr/lib/dockside/libghostty-vt.so.0" }

[package.metadata.packager.appimage]
# Pull in the system libraries the app links against. linuxdeploy
# auto-detects most; list any extras it misses here.
libs = []

[package.metadata.packager.pacman]
# Arch / CachyOS / EndeavourOS / Manjaro. Same polkit-policy install as
# the .deb so users skip the bootstrap-copy prompt. cargo-packager
# generates a PKGBUILD next to a source tarball; build with `makepkg
# -si` (or upload to the AUR).
depends = ["nftables", "polkit", "ca-certificates"]
files = { "packaging/dev.dockside.helper.policy" = "/usr/share/polkit-1/actions/dev.dockside.helper.policy", "target/lib/libghostty-vt.so.0" = "/usr/lib/dockside/libghostty-vt.so.0" }

[package.metadata.packager.macos]
minimum-system-version = "13.0"
# Codesigning identity (set DOCKSIDE_SIGNING_IDENTITY in the runner
# env to override). Unsigned builds still install via xattr unquarantine.
# signing-identity = "Developer ID Application: ..."
info-plist-path = "assets/Info.plist"

[package.metadata.packager.dmg]
# Default DMG layout is fine. Override window size / icon positions
# here if a fancier installer is wanted later.


# ==================== Build Profiles ====================

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true

# ==================== Lints ====================

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Restriction lints
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Pedantic lints
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"

# Performance lints
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
inefficient_to_string = "warn"
large_enum_variant = "warn"
manual_ok_or = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
needless_continue = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"

# Style lints
bool_to_int_with_if = "warn"
default_trait_access = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
